--- a/maze_runner.ioc
+++ b/maze_runner.ioc
@@ -5,15 +5,18 @@ Mcu.CPN=STM32F303K8T6
 Mcu.Family=STM32F3
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
-Mcu.IP2=TIM3
-Mcu.IPNb=3
+Mcu.IP2=TIM1
+Mcu.IP3=TIM3
+Mcu.IPNb=4
 Mcu.Name=STM32F303K(6-8)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PA6
 Mcu.Pin1=PA7
-Mcu.Pin2=PB7
-Mcu.Pin3=VP_TIM3_VS_ClockSourceINT
-Mcu.PinsNb=4
+Mcu.Pin2=PA8
+Mcu.Pin3=PA9
+Mcu.Pin4=PB7
+Mcu.Pin5=VP_TIM3_VS_ClockSourceINT
+Mcu.PinsNb=6
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303K8Tx
@@ -29,11 +32,16 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM1_CC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA6.Locked=true
 PA6.Signal=S_TIM3_CH1
 PA7.Locked=true
 PA7.Signal=S_TIM3_CH2
+PA8.Locked=true
+PA8.Signal=S_TIM1_CH1
+PA9.Locked=true
+PA9.Signal=GPIO_Output
 PB7.Locked=true
 PB7.Signal=I2C1_SDA
 PinOutPanel.RotationAngle=0
@@ -85,10 +93,16 @@ RCC.SYSCLKFreq_VALUE=8000000
 RCC.TIM2Freq_Value=8000000
 RCC.USART1Freq_Value=8000000
 RCC.VCOOutput2Freq_Value=4000000
+SH.S_TIM1_CH1.0=TIM1_CH1,Input_Capture1_from_TI1
+SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
 SH.S_TIM3_CH2.ConfNb=1
+TIM1.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
+TIM1.IPParameters=Channel-Input_Capture1_from_TI1,Prescaler,Period
+TIM1.Period=0xffff-1
+TIM1.Prescaler=72-1
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Period,Prescaler,Pulse-PWM Generation1 CH1,Pulse-PWM Generation2 CH2
