--- a/maze_runner.ioc
+++ b/maze_runner.ioc
@@ -14,9 +14,10 @@ Mcu.Pin0=PA6
 Mcu.Pin1=PA7
 Mcu.Pin2=PA8
 Mcu.Pin3=PA9
-Mcu.Pin4=PB7
-Mcu.Pin5=VP_TIM3_VS_ClockSourceINT
-Mcu.PinsNb=6
+Mcu.Pin4=PA10
+Mcu.Pin5=PB7
+Mcu.Pin6=VP_TIM3_VS_ClockSourceINT
+Mcu.PinsNb=7
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303K8Tx
@@ -34,6 +35,8 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM1_CC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA10.Locked=true
+PA10.Signal=S_TIM1_CH3
 PA6.Locked=true
 PA6.Signal=S_TIM3_CH1
 PA7.Locked=true
@@ -72,7 +75,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM3_Init-TIM3-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.AHBFreq_Value=8000000
 RCC.APB1Freq_Value=8000000
 RCC.APB2Freq_Value=8000000
@@ -95,12 +98,15 @@ RCC.USART1Freq_Value=8000000
 RCC.VCOOutput2Freq_Value=4000000
 SH.S_TIM1_CH1.0=TIM1_CH1,Input_Capture1_from_TI1
 SH.S_TIM1_CH1.ConfNb=1
+SH.S_TIM1_CH3.0=TIM1_CH3,Input_Capture3_from_TI3
+SH.S_TIM1_CH3.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
 SH.S_TIM3_CH2.ConfNb=1
 TIM1.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
-TIM1.IPParameters=Channel-Input_Capture1_from_TI1,Prescaler,Period
+TIM1.Channel-Input_Capture3_from_TI3=TIM_CHANNEL_3
+TIM1.IPParameters=Channel-Input_Capture1_from_TI1,Prescaler,Period,Channel-Input_Capture3_from_TI3
 TIM1.Period=0xffff-1
 TIM1.Prescaler=72-1
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
