--- a/maze_runner.ioc
+++ b/maze_runner.ioc
@@ -5,19 +5,20 @@ Mcu.CPN=STM32F303K8T6
 Mcu.Family=STM32F3
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
-Mcu.IP2=TIM1
+Mcu.IP2=TIM2
 Mcu.IP3=TIM3
 Mcu.IPNb=4
 Mcu.Name=STM32F303K(6-8)Tx
 Mcu.Package=LQFP32
-Mcu.Pin0=PA6
-Mcu.Pin1=PA7
-Mcu.Pin2=PA8
-Mcu.Pin3=PA9
-Mcu.Pin4=PA10
-Mcu.Pin5=PB7
-Mcu.Pin6=VP_TIM3_VS_ClockSourceINT
-Mcu.PinsNb=7
+Mcu.Pin0=PA0
+Mcu.Pin1=PA1
+Mcu.Pin2=PA2
+Mcu.Pin3=PA3
+Mcu.Pin4=PA6
+Mcu.Pin5=PA7
+Mcu.Pin6=PA9
+Mcu.Pin7=VP_TIM3_VS_ClockSourceINT
+Mcu.PinsNb=8
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303K8Tx
@@ -33,20 +34,22 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
-NVIC.TIM1_CC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA10.Locked=true
-PA10.Signal=S_TIM1_CH3
+PA0.Locked=true
+PA0.Signal=S_TIM2_CH1_ETR
+PA1.Locked=true
+PA1.Signal=S_TIM2_CH2
+PA2.Locked=true
+PA2.Signal=S_TIM2_CH3
+PA3.Locked=true
+PA3.Signal=S_TIM2_CH4
 PA6.Locked=true
 PA6.Signal=S_TIM3_CH1
 PA7.Locked=true
 PA7.Signal=S_TIM3_CH2
-PA8.Locked=true
-PA8.Signal=S_TIM1_CH1
 PA9.Locked=true
 PA9.Signal=GPIO_Output
-PB7.Locked=true
-PB7.Signal=I2C1_SDA
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -75,7 +78,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM3_Init-TIM3-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM3_Init-TIM3-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.AHBFreq_Value=8000000
 RCC.APB1Freq_Value=8000000
 RCC.APB2Freq_Value=8000000
@@ -96,19 +99,25 @@ RCC.SYSCLKFreq_VALUE=8000000
 RCC.TIM2Freq_Value=8000000
 RCC.USART1Freq_Value=8000000
 RCC.VCOOutput2Freq_Value=4000000
-SH.S_TIM1_CH1.0=TIM1_CH1,Input_Capture1_from_TI1
-SH.S_TIM1_CH1.ConfNb=1
-SH.S_TIM1_CH3.0=TIM1_CH3,Input_Capture3_from_TI3
-SH.S_TIM1_CH3.ConfNb=1
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Input_Capture1_from_TI1
+SH.S_TIM2_CH1_ETR.ConfNb=1
+SH.S_TIM2_CH2.0=TIM2_CH2,Input_Capture2_from_TI2
+SH.S_TIM2_CH2.ConfNb=1
+SH.S_TIM2_CH3.0=TIM2_CH3,Input_Capture3_from_TI3
+SH.S_TIM2_CH3.ConfNb=1
+SH.S_TIM2_CH4.0=TIM2_CH4,Input_Capture4_from_TI4
+SH.S_TIM2_CH4.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
 SH.S_TIM3_CH2.ConfNb=1
-TIM1.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
-TIM1.Channel-Input_Capture3_from_TI3=TIM_CHANNEL_3
-TIM1.IPParameters=Channel-Input_Capture1_from_TI1,Prescaler,Period,Channel-Input_Capture3_from_TI3
-TIM1.Period=0xffff-1
-TIM1.Prescaler=72-1
+TIM2.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
+TIM2.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
+TIM2.Channel-Input_Capture3_from_TI3=TIM_CHANNEL_3
+TIM2.Channel-Input_Capture4_from_TI4=TIM_CHANNEL_4
+TIM2.IPParameters=Channel-Input_Capture1_from_TI1,Channel-Input_Capture2_from_TI2,Channel-Input_Capture3_from_TI3,Channel-Input_Capture4_from_TI4,Prescaler,Period
+TIM2.Period=0xffff-1
+TIM2.Prescaler=72-1
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Period,Prescaler,Pulse-PWM Generation1 CH1,Pulse-PWM Generation2 CH2
