button (test program 1.1.0)

--- a/maze_runner.ioc
+++ b/maze_runner.ioc
@@ -17,8 +17,9 @@ Mcu.Pin3=PA3
 Mcu.Pin4=PA6
 Mcu.Pin5=PA7
 Mcu.Pin6=PA9
-Mcu.Pin7=VP_TIM3_VS_ClockSourceINT
-Mcu.PinsNb=8
+Mcu.Pin7=PB5
+Mcu.Pin8=VP_TIM3_VS_ClockSourceINT
+Mcu.PinsNb=9
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303K8Tx
@@ -50,6 +51,10 @@ PA7.Locked=true
 PA7.Signal=S_TIM3_CH2
 PA9.Locked=true
 PA9.Signal=GPIO_Output
+PB5.GPIOParameters=GPIO_PuPd
+PB5.GPIO_PuPd=GPIO_PULLUP
+PB5.Locked=true
+PB5.Signal=GPIO_Input
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
